fixed spacing on production.html

--- a/public/css/project.css
+++ b/public/css/project.css
@@ -42,3 +42,7 @@ h3 {
   left: .5%;
   padding-bottom: 5%;
 }
+
+.exmaple-commit{
+  margin-top: 0%;
+}
